tests/fixtures/valid/simple-function.wgsl
// Simple function declaration
fn main() {
    return;
}
