tests/fixtures/invalid/missing-return-type.wgsl
// Missing return type arrow
fn test() -> {
    return 1.0;
}
